examples/test/testpolicy13701.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13701
  namespace: namespace275
spec:
  podSelector:
    matchLabels:
      key38: value28
      key37: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value34
          key6: value30
          key21: value27
      podSelector:
        matchLabels:
          key7: value21
          key31: value16
          key17: value10
